[package]
name = "four-mb"
version = "0.1.0"
authors = ["Noah Bogart <noah.bogart@hey.com>"]
edition = "2018"
license = "MPL-2.0"
default-run = "main"

[dependencies]
bitvec = "0.22.3"
bmp = "0.5.0"
macroquad = "0.3.5"

[profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"

[lib]
name = "lib"
path = "src/lib.rs"
